--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.5.4"
+    "vite": "^2.9.15"
   },
   "dependencies": {
-    "uikit": "^3.7.3"
+    "less": "^4.1.3",
+    "uikit": "^3.15.10"
   }
 }
